@@ -57,6 +57,8 @@ enemyracemanager-explosive_biter_map_color=Explosive Biter's Map Color
 enemyracemanager-toxic_biter_map_color=Toxic Biter's Map Color
 
 #Map Tab
+enemyracemanager-army-limit-multiplier=[Army] Supply Limit Multiplier
+
 enemyracemanager-build-style=[Enemy Expansion] Building Style
 enemyracemanager-build-formation=[Enemy Expansion] Building Formation
 
@@ -135,6 +137,8 @@ enemyracemanager-boss-unit-spawn-size=First number represents how many boss unit
 enemyracemanager-unit-framework-timeout=How long do unit deployer and unit teleporter wait before they shut down.  High value may have performance implication. \n\nDefault: 15
 enemyracemanager-unit-framework-start-auto-deploy=When you place down a deployer, its auto deploy function starts immediately \n\nDefault: false
 #Map Tab
+enemyracemanager-army-limit-multiplier=Define max army supply limit.  This number is based on 150 base + robot follower research count.  By default, you will have 200 pop with level 6 robot follower.
+
 enemyracemanager-build-style=Define how quickly enemy builds their base. Each build group has an internal timer to decide the time to build. \n[font=default-bold]Default[/font] - 1 unit builds 1 building. \n[font=default-bold]Command Center Expand[/font] - If a unit builds a command center, the group will immediately complete a town using formation setting. \n[font=default-bold]Build a town[/font] - Always builds using formation setting. \n[font=default-bold]Full Expand[/font] - The base fully expands when the first unit of the group builds, using formation setting. \n\nDefault: Build a town
 enemyracemanager-build-formation=Define the building formation. 1st is number of command centers, 2nd is for support buildings and 3rd is for turrets. \nIf the build group doesn't have enough units to build a complete formation, it will build spawners before turrets. \nRandom - 3-8 support, 5-12 turrets \n\nDefault: 1-4-5
 
